WebCore/rendering/RenderFileUploadControl.h
@@ -37,6 +37,8 @@ public:
     RenderFileUploadControl(HTMLInputElement*);
     virtual ~RenderFileUploadControl();
 
+    virtual bool isFileUploadControl() const { return true; }
+
     void click();
 
     void valueChanged();
@@ -44,7 +46,7 @@ public:
     void receiveDroppedFiles(const Vector<String>&);
 
     String buttonValue();
-    String fileTextValue();
+    String fileTextValue() const;
     
     bool allowsMultipleFiles();
 
@@ -66,8 +68,14 @@ private:
 
 inline RenderFileUploadControl* toRenderFileUploadControl(RenderObject* object)
 {
-    ASSERT(!object || !strcmp(object->renderName(), "RenderFileUploadControl"));
+    ASSERT(!object || object->isFileUploadControl());
     return static_cast<RenderFileUploadControl*>(object);
+}
+
+inline const RenderFileUploadControl* toRenderFileUploadControl(const RenderObject* object)
+{
+    ASSERT(!object || object->isFileUploadControl());
+    return static_cast<const RenderFileUploadControl*>(object);
 }
 
 // This will catch anyone doing an unnecessary cast.
